--- a/DZ2.ipynb
+++ b/DZ2.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": null,
    "id": "206da969",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
     }
    ],
    "source": [
-    "plt.imshow(image_gray, cmap=\"gray\")"
+    "plt.imshow(image_gray, cmap=\"gray\") # без  cmap='gray' цвета могут быть некоректными"
    ]
   },
   {
