--- a/DZ3.ipynb
+++ b/DZ3.ipynb
@@ -2,20 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1159,
+   "execution_count": 12,
    "id": "144fbdd2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import cv2\n",
-    "import matplotlib.pyplot as plt\n",
-    "import copy"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1160,
+   "execution_count": 13,
    "id": "d5b3e351",
    "metadata": {},
    "outputs": [],
@@ -27,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1161,
+   "execution_count": 14,
    "id": "819a2141",
    "metadata": {},
    "outputs": [
@@ -37,7 +36,7 @@
        "(np.float64(-0.5), np.float64(224.5), np.float64(224.5), np.float64(-0.5))"
       ]
      },
-     "execution_count": 1161,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -59,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1162,
+   "execution_count": 15,
    "id": "9d8dacfc",
    "metadata": {},
    "outputs": [
@@ -69,7 +68,7 @@
        "(np.float64(-0.5), np.float64(224.5), np.float64(224.5), np.float64(-0.5))"
       ]
      },
-     "execution_count": 1162,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -85,16 +84,16 @@
     }
    ],
    "source": [
-    "canny = cv2.Canny(image_gray, 50, 150, apertureSize=3)# убирает шумы смотрит градиент оставляет сильные перепады яркости Hysteresis Thresholding\n",
-    "#(делает чёрные и белые пиксели от значений)\n",
+    "    canny = cv2.Canny(image_gray, 50, 150, apertureSize=3)# убирает шумы смотрит градиент оставляет сильные перепады яркости Hysteresis Thresholding\n",
+    "    #(делает чёрные и белые пиксели от значений)\n",
     "\n",
-    "plt.imshow(canny, cmap=\"gray\")\n",
-    "plt.axis('off')"
+    "    plt.imshow(canny, cmap=\"gray\")\n",
+    "    plt.axis('off')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1163,
+   "execution_count": 16,
    "id": "0e6da954",
    "metadata": {},
    "outputs": [],
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1164,
+   "execution_count": 17,
    "id": "23c0f514",
    "metadata": {},
    "outputs": [],
@@ -136,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1165,
+   "execution_count": 18,
    "id": "c81e5594",
    "metadata": {},
    "outputs": [
@@ -146,7 +145,7 @@
        "(np.float64(-0.5), np.float64(224.5), np.float64(224.5), np.float64(-0.5))"
       ]
      },
-     "execution_count": 1165,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -168,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1166,
+   "execution_count": 19,
    "id": "54445271",
    "metadata": {},
    "outputs": [
@@ -187,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1167,
+   "execution_count": 20,
    "id": "8dd54814",
    "metadata": {},
    "outputs": [],
@@ -204,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1168,
+   "execution_count": 21,
    "id": "b9ce7f00",
    "metadata": {},
    "outputs": [
@@ -237,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1169,
+   "execution_count": 22,
    "id": "f38096c3",
    "metadata": {},
    "outputs": [
@@ -247,7 +246,7 @@
        "(np.float64(-0.5), np.float64(224.5), np.float64(224.5), np.float64(-0.5))"
       ]
      },
-     "execution_count": 1169,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -263,7 +262,7 @@
     }
    ],
    "source": [
-    "bin_img = copy.deepcopy(image_gray)\n",
+    "bin_img = image_gray.copy()\n",
     "T  = 50\n",
     "bin_img[image_gray < T] = 0\n",
     "bin_img[image_gray >= T] = 255\n",
